--- a/03_dash-board/style.css
+++ b/03_dash-board/style.css
@@ -23,6 +23,7 @@ body {
     top: 0;
     left: 0;
     z-index: 10;
+    border-bottom: 1px solid #b8b8b8;
 }
 
 .dash-company-logo-box {
@@ -115,7 +116,7 @@ body {
 
 .last-login-date-box p {
     font-size: 0.8rem;
-    font-weight: 600;
+    font-weight: 500;
     color: #575E6A;
 }
 
@@ -129,7 +130,7 @@ body {
 
 .profile-content img {
     width: 19px;
-    background-color: gray;
+    background-color: #F4F6F9;
     padding: 10px 10px;
     border-radius: 30px;
     margin-right: 10px;
@@ -144,6 +145,7 @@ body {
 
 .admin-name h4 {
     font-size: 1rem;
+    color: rgb(81, 81, 81);
 }
 
 .admin-name p {
@@ -151,7 +153,8 @@ body {
     color: #A5A5A5;
 }
 
-/* side navbar css */
+/* ===========side navbar css============ */
+
 .side-navbar-container li {
     list-style: none;
 }
@@ -175,6 +178,7 @@ body {
     /* border-right: 1px solid #F4F6F9; */
     border-right: 1px solid #b8b8b8;
     transition: width .3s ease-in-out;
+    padding-top: 20px;
 }
 
 /* .main {
@@ -225,7 +229,7 @@ body {
 } */
 
 .side-navbar-container ul li {
-    margin-top: 10px;
+    margin-top: 13px;
     list-style: none;
     background-color: white;
     font-size: 1rem;
@@ -262,8 +266,8 @@ body {
 
 .navbar-separator {
     width: 100%;
-    height: 1px;
-    background-color: #808080;
+    height: 0.8px;
+    background-color: #767676;
     margin: 10px 0px;
 }
 
@@ -681,7 +685,8 @@ main {
     padding: 10px 30px;
 }
 
-/*  */
+/* got to top button css */
+
 .goto-top-btn {
     width: 100%;
     background-color: #F4F6F9;
@@ -692,7 +697,7 @@ main {
 
 
 .goto-top-btn a img {
-    width: 20px;
+    width: 17px;
 }
 
 .goto-top-btn a {
@@ -702,7 +707,7 @@ main {
     justify-content: center;
     gap: 7px;
 
-    padding: 10px 15px;
+    padding: 7px 15px;
     border-radius: 30px;
     border: 1px solid black;
     font-size: 0.9rem;
@@ -710,4 +715,133 @@ main {
     text-decoration: none;
     background-color: white;
     color: black;
+}
+
+
+/* ================ app download status section ======== */
+
+.app-download-status-content {
+    width: 95%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
+    border-radius: 15px;
+    margin-top: 25px;
+}
+
+.download-status-container {
+    width: 96%;
+    font-family: "Poppins", sans-serif;
+}
+
+.download-status-heading {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 25px 0px 15px 0px;
+}
+
+.download-status-heading h1 {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+#download-app-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    background-color: #098CE3;
+    border: 1px solid #098CE3;
+    padding: 8px 30px;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.download-status-heading #download-app-btn img {
+    width: 13px;
+}
+
+.download-status-heading #download-app-btn p {
+    font-size: 0.85rem;
+    color: white;
+}
+
+.download-status-container span p {
+    font-size: 0.9rem;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.download-status-buttons {
+    width: 100%;
+    font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    flex-wrap: wrap;
+    gap: 10px;
+    background-color: white;
+    margin: 0px 0px 20px 0px;
+}
+
+.download-status-buttons button {
+    padding: 4px 25px;
+    border-radius: 30px;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.download-status-list-container {
+    width: 100%;
+    /* background-color: yellow; */
+}
+
+.download-status-list-heading {
+    background-color: #F4F6F9;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 17px 0px;
+    border-radius: 7px;
+}
+
+.download-status-list-heading p {
+    width: 17%;
+    font-size: 1rem;
+    font-weight: 500;
+    display: flex;
+    justify-content: baseline;
+}
+
+.download-status-list {
+    width: 100%;
+}
+
+.states-list-item {
+    background-color: white;
+    border-bottom: 1px solid #F4F6F9;
+}
+
+.states-list-item ul {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+    background-color: white;
+    padding: 17px 0px;
+}
+
+.states-list-item ul li {
+    width: 14%;
+    list-style: none;
+    display: flex;
+    justify-content: baseline;
 }
