--- a/03_dash-board/style.css
+++ b/03_dash-board/style.css
@@ -293,7 +293,7 @@ main {
 }
 
 .application-dashboard {
-    margin-top: 30px;
+    margin-top: 25px;
     width: 100%;
     background-color: white;
     border-radius: 15px;
@@ -1132,11 +1132,9 @@ main {
     font-weight: 500;
 }
 
-.mentorship-content-container button {
-    margin-right: 30px;
-}
 
-.mentorship-content-container button {
+#Create-btn {
+    margin-right: 30px;
     font-size: 0.85rem;
     font-weight: 600;
     color: white;
@@ -1144,7 +1142,9 @@ main {
     border-radius: 30px;
     border: none;
     background-color: #C1272D;
+    cursor: pointer;
 }
+
 
 
 .mentorship-summary-container {
@@ -1294,4 +1294,105 @@ main {
 
 .table-user-list-item {
     display: flex;
+}
+
+/* internship css */
+
+.internship-content {
+    width: 95%;
+}
+
+.internship-content-container {
+    margin-top: 30px;
+    width: 100%;
+    background-color: white;
+    border-radius: 15px;
+}
+
+.internship-content-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 0px;
+}
+
+.internship-content-container span {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.internship-content-container span img {
+    width: 22px;
+    margin: 0px 10px;
+}
+
+.internship-content-container span h1 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.internship-summary-container {
+    background-color: white;
+    width: 100%;
+    border-radius: 15px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
+
+.internship-summary-container h1 {
+    margin: 20px 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.internship-summary-container .box {
+    width: 220px;
+    height: 150px;
+    border-radius: 15px;
+    padding: 15px 20px;
+    cursor: pointer;
+}
+
+.internship-summary-box {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+}
+
+
+.internship-status-container {
+    background-color: white;
+    width: 100%;
+    border-radius: 15px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
+
+.internship-status-container h1 {
+    margin: 20px 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.internship-status-container .box {
+    width: 220px;
+    height: 160px;
+    border-radius: 15px;
+    padding: 15px 20px;
+    cursor: pointer;
+}
+
+.internship-status-box {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
 }
