--- a/01_landing-page/style.css
+++ b/01_landing-page/style.css
@@ -26,23 +26,6 @@ body {
 
 }
 
-/* .up-circle-image-container {
-    position: absolute;
-} */
-
-@keyframes rotateImg {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    50% {
-        transform: rotate(10deg);
-    }
-
-    100% {
-        transform: rotate(0deg);
-    }
-}
 
 .down-circle-image-container {
     min-width: 100%;
@@ -56,12 +39,13 @@ body {
 
 .down-circle-image-container img {
     width: 150px;
+    filter: drop-shadow(0px 0px 3px rgba(128, 128, 128, 0.253));
 }
+
 
 .down-circle-image-container {
     transform-origin: center;
     animation: rotateImg 2s infinite alternate ease-in-out;
-    /* z-index: -3; */
 }
 
 @keyframes rotateImg {
@@ -72,10 +56,6 @@ body {
     100% {
         transform: rotate(0);
     }
-
-    /* 100% {
-        transform: rotate(10deg);
-    } */
 
 }
 
@@ -126,6 +106,7 @@ body {
     width: 176px;
     top: 90px;
     left: 595px;
+    z-index: ;
 }
 
 .Landing-page-img-container {
@@ -141,8 +122,9 @@ body {
 .Landing-page-img-container img {
     width: 600px;
     position: fixed;
-    animation: updown 1.5s alternate ease-in-out infinite;
+    animation: updown 2s alternate ease-in-out infinite;
     z-index: 10;
+
 }
 
 @keyframes updown {
@@ -172,15 +154,16 @@ body {
     align-items: baseline;
     justify-content: space-between;
     flex-direction: column;
+    /* background-color: gray; */
 }
 
 .logo img {
-    width: 106px;
+    width: 100px;
     margin: 0px 0px 5px 0px;
 }
 
 .logo p {
-    font-size: 1.3rem;
+    font-size: 1.25rem;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     color: #808080;
@@ -194,11 +177,11 @@ body {
 
 .form-container h1 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 3rem;
+    font-size: 2.8rem;
 }
 
 .input-container p {
-    font-size: 1.1rem;
+    font-size: 1rem;
     color: #575E6A;
     font-weight: 500;
 }
@@ -209,15 +192,13 @@ body {
 
 .input {
     width: 100%;
-    height: 54px;
+    height: 50px;
     background-color: #F5F5F5;
     border-radius: 7px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 10px;
-
-
 }
 
 .input input {
@@ -229,6 +210,7 @@ body {
     font-size: 16px;
     padding: 0px 15px;
     outline: none;
+
 }
 
 .input img {
@@ -243,7 +225,7 @@ body {
     margin-top: 15px;
     color: #098CE3;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 0.95rem;
     font-weight: 500;
 }
 
@@ -255,7 +237,7 @@ body {
     font-weight: 600;
     color: white;
     border: none;
-    padding: 18px 0px;
+    padding: 16px 0px;
     border-radius: 7px;
     cursor: pointer;
     transition: all .3s ease-in;
