--- a/03_dash-board/style.css
+++ b/03_dash-board/style.css
@@ -1396,3 +1396,96 @@ main {
     flex-wrap: wrap;
     margin-bottom: 30px;
 }
+
+/* fresher css */
+
+.fresher-job-content {
+    width: 95%;
+}
+
+.fresher-job-content-container {
+    width: 100%;
+    border-radius: 15px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 25px;
+    padding: 30px 0px;
+}
+
+.fresher-job-content-container span {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.fresher-job-content-container h1 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.fresher-job-content-container span img {
+    width: 22px;
+    margin: 0px 10px;
+}
+
+.fresher-job-summary-container {
+    width: 100%;
+    margin-top: 30px;
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.fresher-job-summary-container h1 {
+    margin: 20px 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.fresher-job-summary-box {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin: 0px 0px 30px 30px;
+}
+
+.fresher-job-summary-box .box {
+    width: 230px;
+    height: 150px;
+    /* border: 1px solid black; */
+    padding: 20px 10px 20px 20px;
+    border-radius: 15px;
+}
+
+
+.fresher-job-status-container {
+    width: 100%;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 15px;
+}
+
+.fresher-job-status-container h1 {
+    margin: 20px 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.fresher-job-status-box {
+    display: flex;
+    margin: 0px 0px 30px 30px;
+    gap: 20px;
+}
+
+.fresher-job-status-box .box {
+    width: 220px;
+    height: 150px;
+    padding: 20px 10px 20px 20px;
+    border-radius: 15px;
+}
