--- a/03_dash-board/style.css
+++ b/03_dash-board/style.css
@@ -262,6 +262,36 @@ main {
     position: fixed;
     left: 20%;
     /* top: 12vh; */
+    transition: all .3s ease;
+}
+
+@media screen and (max-width: 1100px) {
+    #dash-board-body-wrap main {
+        width: 95%;
+        left: 60px;
+    }
+
+    .side-navbar-container {
+        width: 60px;
+    }
+
+    .side-navbar-container li a span {
+        display: none;
+    }
+
+    .side-navbar-container h1 {
+        display: none;
+    }
+
+    .side-navbar-container ul li a i {
+        font-size: 1.5rem;
+        margin-left: 10px;
+    }
+
+    /* for dashboard */
+    #box-separator {
+        display: none;
+    }
 }
 
 .dashboard-container {
@@ -289,10 +319,360 @@ main {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    /* overflow-y: scroll; */
+    /* background-color: red; */
+}
+
+.main-dashboard {
+    width: 100%;
+    display: flex;
+    gap: 25px;
+    margin-top: 25px;
+}
+
+
+.application-hr-dashboard {
+    width: 75%;
+    display: flex;
+    flex-direction: column;
 }
 
 .application-dashboard {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.application-dashoard-heading {
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* background-color: blue; */
+    padding: 15px 0px 15px 0px;
+}
+
+.application-dashoard-heading h1 {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.application-dashoard-heading i {
+    font-size: 1.3rem;
+    color: #808080;
+}
+
+#heading-separator {
+    width: 100%;
+    height: .5px;
+    background-color: #dfdfdf;
+    margin: 0px 0px 20px 0px;
+}
+
+.application-dashboard-box {
+    width: 95%;
+    /* background-color: rgb(205, 205, 205); */
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.application-dashboard-box .box {
+    width: 220px;
+    height: 160px;
+    padding: 20px 5px 20px 20px;
+}
+
+.application-dashboard-box .box .box-img-container {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#new-register-txt div {
+    color: #B0BBC6;
+    font-size: 0.8rem;
+    display: flex;
+}
+
+#new-register-txt div p {
+    color: #34AD78;
+}
+
+#new-register-txt div p span {
+    font-size: 0.7rem;
+}
+
+
+#box-separator {
+    width: .5px;
+    height: 200px;
+    margin: 0px 10px;
+    background-color: #e1e1e1;
+}
+
+
+.hr-dashboard {
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hr-dashboard-heading {
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 0px 15px 0px;
+}
+
+.hr-dashboard-heading h1 {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.hr-dashboard-heading i {
+    font-size: 1.3rem;
+    color: #808080;
+}
+
+.hr-dashboard-cards {
+    width: 95%;
+    margin: 10px 0px 30px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.hr-dashboard-cards .hr-dashboard-card {
+    width: 152px;
+    height: 90px;
+    background-color: #F4F6F9;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 1px solid #DDDDDD;
+}
+
+.hr-dashboard-card .hr-amount-detail {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.hr-amount-detail p {
+    font-size: 1.65rem;
+    font-weight: 500;
+    color: black;
+}
+
+.hr-amount-detail i {
+    font-size: 0.7rem;
+    color: #1E1E1E;
+}
+
+.hr-dashboard-card p {
+    display: flex;
+    justify-content: end;
+    font-weight: 500;
+}
+
+.hr-card-icon {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.hr-card-icon img {
+    width: 16px;
+}
+
+.hr-card-icon p {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.hr-dashboard-cards .hr-dashboard-card:nth-child(4) {
+    border: 1px solid #C1272D;
+    position: relative;
+}
+
+#pending-notify {
+    width: 55%;
+    background-color: #C1272D;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px 1px;
+    border-radius: 20px;
+    position: absolute;
+    top: -10px;
+    right: -20px;
+}
+
+#pending-notify img {
+    width: 10px;
+    margin: 0px 3px;
+}
+
+#pending-notify p {
+    font-size: 0.55rem;
+    color: white;
+
+}
+
+
+
+/* oportunities resolved dashboard css */
+
+.opportunities-resolved-dashboard {
+    width: 23%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: baseline; */
+}
+
+.opportunities-dashboard {
+    width: 100%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.opportunities-heading {
+    width: 85%;
+    padding: 15px 0px 15px 0px;
+}
+
+.opportunities-heading h1 {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.opportunities-cards {
+    width: 85%;
+    /* background-color: gray; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.opportunities-cards .opportunities-card {
+    width: 80%;
+    height: 75px;
+    border-radius: 10px;
+    padding: 10px 20px 5px 20px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.opportunities-card div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
+
+.opportunities-card div p {
+    font-size: 0.75rem;
+}
+
+.opportunities-card div span {
+    font-size: 1.35rem;
+    font-weight: 500;
+}
+
+
+.resolved-queries-dashboard {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+    border-radius: 10px;
+}
+
+.resolved-query-heading {
+    width: 85%;
+    padding: 15px 0px 15px 0px;
+}
+
+.resolved-query-heading h1 {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.resolved-query-data {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.resolved-query-data p {
+    font-size: 2.2rem;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+.resolved-query-data p span {
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: #B0BBC6;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .application-dashboard {
     margin-top: 25px;
     width: 100%;
     background-color: white;
@@ -310,11 +690,11 @@ main {
 
 .application-dashboard-box {
     width: 95%;
-    /* background-color: aqua; */
     margin: 0px 30px 30px 30px;
     display: flex;
     align-items: center;
     justify-content: baseline;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
@@ -360,12 +740,12 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
+} */
 
 
 /* dashboard -> business dashboard css */
 
-.business-dashboard {
+/* .business-dashboard {
     width: 100%;
     background-color: white;
     border-radius: 15px;
@@ -391,7 +771,7 @@ main {
 
 .business-dashboard .box {
     height: 120px;
-}
+} */
 
 
 /* dashboard -> Hiremi-Ongoing-dashboard css */
@@ -485,7 +865,7 @@ main {
 }
 
 .query-summary .box {
-    width: 220px;
+    width: 65%;
     height: 120px;
     background-color: rgb(196, 196, 196);
     border-radius: 15px;
@@ -1158,7 +1538,7 @@ main {
 }
 
 .mentorship-summary-container h1 {
-    margin: 30px 30px;
+    margin: 20px 30px;
     font-size: 1.3rem;
     font-weight: 500;
 }
@@ -1200,7 +1580,7 @@ main {
 }
 
 .mentorship-status-container h1 {
-    margin: 30px 30px;
+    margin: 20px 30px;
     font-size: 1.3rem;
     font-weight: 500;
 }
@@ -1300,6 +1680,7 @@ main {
 
 .internship-content {
     width: 95%;
+    font-family: "Poppins", sans-serif;
 }
 
 .internship-content-container {
@@ -1401,6 +1782,7 @@ main {
 
 .fresher-job-content {
     width: 95%;
+    font-family: "Poppins", sans-serif;
 }
 
 .fresher-job-content-container {
@@ -1479,13 +1861,111 @@ main {
 
 .fresher-job-status-box {
     display: flex;
+    flex-wrap: wrap;
     margin: 0px 0px 30px 30px;
     gap: 20px;
 }
 
 .fresher-job-status-box .box {
-    width: 220px;
+    width: 230px;
     height: 150px;
     padding: 20px 10px 20px 20px;
     border-radius: 15px;
+}
+
+/* experienced css */
+
+.experienced-job-content {
+    width: 95%;
+    font-family: "Poppins", sans-serif;
+}
+
+.experienced-job-content-container {
+    width: 100%;
+    border-radius: 15px;
+    background-color: white;
+    margin-top: 25px;
+
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0px;
+}
+
+.experienced-job-content-container span {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.experienced-job-content-container span img {
+    width: 22px;
+    margin: 0px 10px;
+}
+
+.experienced-job-content-container span h1 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.experienced-job-summary-container {
+    width: 100%;
+    background-color: white;
+    margin-top: 30px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.experienced-job-summary-container h1 {
+    margin: 20px 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.experienced-job-summary-box {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 0px 0px 30px 30px;
+}
+
+.experienced-job-summary-box .box {
+    width: 230px;
+    height: 150px;
+    border-radius: 15px;
+    padding: 20px 10px 20px 20px;
+    cursor: pointer;
+}
+
+.experienced-job-status-container {
+    width: 100%;
+    background-color: white;
+    margin-top: 30px;
+    border-radius: 15px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.experienced-job-status-container h1 {
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin: 20px 30px;
+}
+
+.experienced-job-status-box {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 0px 0px 30px 30px;
+}
+
+.experienced-job-status-box .box {
+    width: 230px;
+    height: 150px;
+    border-radius: 15px;
+    padding: 20px 10px 20px 20px;
+    cursor: pointer;
 }
