--- a/Assets/css/utility.css
+++ b/Assets/css/utility.css
@@ -4,7 +4,7 @@
 }
 
 .green-btn {
-    color: rgb(0, 211, 0);
+    color: #34AD78;
     font-size: 0.53rem;
     border: 1px solid #34AD78;
     border-radius: 20px;
@@ -18,7 +18,7 @@
 }
 
 .red-btn {
-    color: red;
+    color: #C1272D;
     font-size: 0.53rem;
     border: 1px solid #C1272D;
     border-radius: 20px;
@@ -40,6 +40,7 @@
 
 #content-amount {
     font-size: 2.4rem;
+    font-weight: 500;
 }
 
 #content-amount span {
@@ -52,21 +53,42 @@
     align-items: flex-end;
 }
 
-#new-register-txt p:nth-child(1) {
+/* #new-register-txt p:nth-child(1) {
     font-size: 1rem;
     color: #B0BBC6;
-}
+} */
 
-#new-register-txt p:nth-child(2) {
+/* #new-register-txt p:nth-child(2) {
     font-size: 1rem;
     color: #34AD78;
-}
+} */
 
-#new-register-txt p:nth-child(3) {
+/* #new-register-txt p:nth-child(3) {
     font-size: 0.7rem;
     color: #34AD78;
 
+} */
+/* dashboard -> opportunities  css*/
+
+.opportunities-cards .opportunities-card:nth-child(1) {
+    border: 1px solid #FC3E41;
+    background: linear-gradient(#fc3e4138, #ff6f0131);
 }
+
+.opportunities-cards .opportunities-card:nth-child(2) {
+    border: 1px solid #FF6E01;
+    background: linear-gradient(#ff6f0120, #febe0d43);
+}
+
+.opportunities-cards .opportunities-card:nth-child(3) {
+    border: 1px solid #CB44BD;
+    background: linear-gradient(#cb44bd2b, #db6aa125);
+}
+
+
+
+
+
 
 
 /* dashboard -> hiremi ongoing dashbord css */
@@ -414,6 +436,11 @@
 }
 
 /* internship --> internship summary */
+.internship-summary-box .box div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 
 .internship-summary-box .box p:nth-child(3) {
     margin: 5px 0px;
@@ -540,7 +567,7 @@
 }
 
 .fresher-job-summary-box .box p:nth-child(2) {
-    font-size: 0.85rem;
+    font-size: 0.8rem;
 }
 
 .fresher-job-summary-box .box p:nth-child(3) {
@@ -640,4 +667,108 @@
 
 .fresher-job-status-box .box:nth-child(2):hover {
     outline: 1px solid #cb46bb;
+}
+
+
+/* Experieced job css */
+/* for all boxes */
+.experienced-job-summary-box .box p:nth-child(2) {
+    font-size: 0.8rem;
+}
+
+.experienced-job-summary-box .box p:nth-child(3) {
+    font-size: 0.85rem;
+    color: #B0BBC6;
+    margin: 5px 0px;
+}
+
+.experienced-job-summary-box .box p:nth-child(3) span {
+    color: #34AD78;
+}
+
+/* ===================== */
+
+.experienced-job-summary-box .box:nth-child(1) {
+    background-color: #cb46bb12;
+}
+
+.experienced-job-summary-box .box:nth-child(1):hover {
+    outline: 1px solid #cb46bb;
+}
+
+.experienced-job-summary-box .box:nth-child(2) {
+    background-color: #098ce316;
+}
+
+.experienced-job-summary-box .box:nth-child(2):hover {
+    outline: 1px solid #098CE3;
+}
+
+.experienced-job-summary-box .box:nth-child(3) {
+    background-color: #34ad7916;
+}
+
+.experienced-job-summary-box .box:nth-child(3):hover {
+    outline: 1px solid #34AD78;
+}
+
+.experienced-job-summary-box .box:nth-child(4) {
+    background-color: #dc143c12;
+}
+
+.experienced-job-summary-box .box:nth-child(4):hover {
+    outline: 1px solid #DC143C;
+}
+
+/* experiences job -> experienced job status */
+/* for all boxes */
+
+.experienced-job-status-box .box div:nth-child(2) {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.experienced-job-status-box .box div:nth-child(2) p {
+    color: green;
+    border: 1px solid #34AD78;
+    background-color: #34ad7916;
+    font-size: 0.7rem;
+    border-radius: 30px;
+    padding: 1px 5px;
+}
+
+.experienced-job-status-box .box:nth-child(1) p:nth-child(2) {
+    font-size: 0.75rem;
+}
+
+.experienced-job-status-box .box p:nth-child(2) {
+    font-size: 0.8rem;
+}
+
+.experienced-job-status-box .box p:nth-child(3) {
+    font-size: 0.85rem;
+    color: #B0BBC6;
+    margin: 5px 0px;
+}
+
+.experienced-job-status-box .box p:nth-child(3) span {
+    color: #34AD78;
+}
+
+/* ================== */
+.experienced-job-status-box .box:nth-child(1) {
+    background-color: #09c0b415;
+}
+
+.experienced-job-status-box .box:nth-child(1):hover {
+    outline: 1px solid #09C0B5;
+}
+
+.experienced-job-status-box .box:nth-child(2) {
+    background-color: #cb46bb13;
+}
+
+.experienced-job-status-box .box:nth-child(2):hover {
+    outline: 1px solid #CB46BC;
 }
